# SSHPlex

./: docker-compose.consul.yml  pyproject.toml  sshplex.yaml
sshplex/: config-template.yaml  main.py  sshplex_connector.py
sshplex/lib/: config.py
sshplex/lib/multiplexer/: tmux.py
sshplex/lib/sot/: ansible.py  consul.py  factory.py
sshplex/lib/ui/: host_selector.py  session_manager.py
