[build-system]
requires = ["setuptools>=64", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "sshplex"
version = "1.0.19"
description = "Multiplex your SSH connections with style"
authors = [{name = "MJAHED Sabri", email = "contact@sabrimjahed.com"}]
readme = "README.md"
license = {text = "MIT"}
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "Intended Audience :: System Administrators",
    "License :: OSI Approved :: MIT License",
    "Operating System :: POSIX :: Linux",
    "Operating System :: MacOS",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: System :: Networking",
    "Topic :: System :: Systems Administration",
    "Topic :: Terminals",
]
keywords = ["ssh", "tmux", "multiplexer", "netbox", "tui", "terminal"]
requires-python = ">=3.8"
dependencies = [
    "pynetbox==7.5.0",
    "textual==3.3.0",
    "pyyaml==6.0.2",
    "pydantic==2.11.0",
    "loguru==0.7.3",
    "rich==13.9.4",
    "libtmux==0.46.1",
    "pyperclip==1.11.0"
]

[project.optional-dependencies]
consul = [
    "python-consul2>=0.1.5",
]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "black>=22.0.0",
    "flake8>=5.0.0",
    "mypy>=1.0.0",
    "types-PyYAML>=6.0.0",
]

[project.urls]
Homepage = "https://github.com/sabrimjd/sshplex"
Repository = "https://github.com/sabrimjd/sshplex"
Documentation = "https://github.com/sabrimjd/sshplex#readme"
"Bug Tracker" = "https://github.com/sabrimjd/sshplex/issues"

[project.scripts]
sshplex = "sshplex.main:main"
sshplex-cli = "sshplex.cli:main"

[tool.setuptools.packages.find]
include = ["sshplex*"]

[tool.setuptools.package-data]
sshplex = ["*.yaml", "*.yml"]

[tool.black]
line-length = 88
target-version = ['py311']

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
